--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -1042,7 +1042,7 @@ Nach der Einführung sollten die Testpersonen die Anwendung benutzen, wobei zwei
    \label{figure:paper-mockup-anna}
 \end{figure}
 
-Um die Hauptfrage, ob Kommunikationshilfe (Abschnitt~\ref{section:konzeption:kommunikation}) statisch oder dynamisch präsentiert werden soll, zu klären, wurde die dynamische Variante drei der fünf Teilnehmer gezeigt. Die anderen zwei testeten die statische Kommunikationshilfe. Alle Teilnehmer wurden am Ende gefragt, ob ihnen die Alternative mehr geholfen hätte.
+Um die Hauptfrage, ob Kommunikationshilfe (Abschnitt~\ref{section:konzeption:kommunikation}) statisch oder dynamisch präsentiert werden soll, zu klären, wurde die dynamische Variante drei der fünf Teilnehmer gezeigt. Die anderen zwei testeten die statische Kommunikationshilfe. Allen Teilnehmern wurde am Ende der Studie die andere Variante erklärt. Sie wurden dann gefragt, ob ihnen die Alternative mehr geholfen hätte oder besser verständlich gewesen wäre.
 
 \subsubsection{Einschränkungen}
 
@@ -1054,7 +1054,7 @@ Die gewählte Methode weist gewisse Einschränkungen auf, denen man sich bei der
 
 Andererseits war der Mockup sehr klein, er beinhaltete nur drei Komponenten und zwei Kommunikationskanäle. Gerade letztere konnten die Teilnehmer auch ohne Hilfe verstehen, da sich der \enquote{Bildschirm} nur langsam und schrittweise änderte. Außerdem bezogen sich die Äußerungen und Vorschläge nur auf die vorgestellten Komponenten, ohne Alternativen zu berücksichtigen (beispielsweise Scatterplots, Parallel Coordinates etc.).
 
-Zuletzt liegt es in der Natur des Paper Mockups, dass Interaktionen wie MouseOver, scrollen, zoomen oder draggen nur mit viel Aufwand umgesetzt werden können. Da dies im beschriebenen Mockup nicht der Fall war, konnte die Wirksamkeit dieser Interaktionen nicht überprüft werden.
+Zuletzt liegt es in der Natur des Paper Mockups, dass Interaktionen wie MouseOver, scrollen oder zoomen nur mit viel Aufwand umgesetzt werden können. Da dies im beschriebenen Mockup nicht der Fall war, konnte die Wirksamkeit dieser Interaktionen nicht überprüft werden.
 
 \subsubsection{Ergebnisse}
 
@@ -1070,9 +1070,9 @@ Zuletzt liegt es in der Natur des Paper Mockups, dass Interaktionen wie MouseOve
 % Animation von Mauszeiger in Comics: Ausblick.
 % Auswahlhilfe für Annotationen: Ausblick.
 
-Zwei der Teilnehmer konnten sofort erkennen, dass die vier Panels der Bedienungshilfe (Abschnitt~\ref{section:konzeption:bedienung}) einen Comic und dieser wiederum eine Anleitung darstellte. Das sollte zusätzlich mit Text beschrieben werden. Außerdem könnte ein ansprechenderes Layout der Panels dazu führen, dass sie mehr als Comic und weniger als vier unabhängige Bilder wahrgenommen werden. Einer der Teilnehmer merkte zusätzlich an, dass nicht ganz klar ist, ob der durch die Pfeile der statischen Kommunikationshilfe (Abschnitt~\ref{section:konzeption:kommunikation}) angedeutete Nachrichtenaustausch immer, nacheinander oder gleichzeitig stattfindet. Nachdem das für das Hilfesystem auch nicht eindeutig ist, kann in dieser Hinsicht leider nicht viel getan werden. Vier der fünf Teilnehmer waren sich einig, dass die letzten drei Panels des Comics auch ausreichen würden, da die Information in den ersten beiden redundant ist: Durch die Auswahl des Pfeils ist klar, um welche Komponenten es geht.
+Die Bedienungshilfe (Abschnitt~\ref{section:konzeption:bedienung}) wurde als ein Comic mit vier Panels vorgestellt, welche die Fragen \enquote{Welche Komponente?}, \enquote{Welche Elemente?}, \enquote{Welche Operation?} und \enquote{Was für ein Ergebnis?} beantworten sollten. Zwei der Teilnehmer konnten sofort erkennen, dass die vier Bilder einen Comic und dieser wiederum eine Anleitung darstellte. Das sollte zusätzlich mit Text beschrieben werden. Außerdem könnte ein ansprechenderes Layout der Panels dazu führen, dass sie mehr als Comic und weniger als vier unabhängige Bilder wahrgenommen werden. Einer der Teilnehmer merkte zusätzlich an, dass nicht ganz klar ist, ob der durch die Pfeile der statischen Kommunikationshilfe (Abschnitt~\ref{section:konzeption:kommunikation}) angedeutete Nachrichtenaustausch immer, nacheinander oder gleichzeitig stattfindet. Nachdem das für das Hilfesystem auch nicht eindeutig ist, kann in dieser Hinsicht leider nicht viel getan werden. Vier der fünf Teilnehmer waren sich einig, dass die letzten drei Panels des Comics auch ausreichen würden, da die Information in den ersten beiden redundant ist: Durch die Auswahl des Pfeils ist klar, um welche Komponenten es geht.
 
-Es gab keinen eindeutigen Sieger bezüglich der Frage, ob die Kommunikationshilfe (Abschnitt~\ref{section:konzeption:kommunikation}) statisch oder dynamisch angeboten werden soll (Tabelle~\ref{table:paper-mockup-kommunikationshilfe}). Jeder Teilnehmer schätzte die jeweilige Variante der Hilfestellung als notwendig ein ($+$) oder nicht ($-$), wobei ein Teilnehmer sich nicht festlegen wollte (0). Insgesamt kann festgestellt werden, dass Kommunikationshilfe notwendig ist. Allerdings waren sich die Teilnehmer uneins, welche Form die Hilfestellung haben sollte: Je ein Teilnehmer fand beide gut oder beide schlecht, zwei bevorzugten die statische Variante und einer die dynamische. Es ist zu beachten, dass diese Anmerkungen nach einer sehr übersichtlichen Situation im Mashup gemacht wurden. Wäre die Nutzerstudie mit mehr Komponenten durchgeführt worden, böte sich wahrscheinlich ein anderes Bild. Deswegen sollten in einer weiteren Nutzerstudie Grenzwerte für die Anzahl an Komponenten und Kommunikationskanälen bestimmt werden, bei denen Benutzer die Kommunikation nicht mehr ohne weiteres nachvollziehen können. Das Hilfesystem kann dann beim Start der kompositen Anwendung entscheiden, ob zusätzlich die dynamische Kommunikationshilfe eingesetzt werden muss.
+Prinzipiell waren zwei Varianten der Kommunikationshilfe (Abschnitt~\ref{section:konzeption:kommunikation}) denkbar: Einmal würde sie zeitgleich mit der Bedienungshilfe auf Anfrage des Benutzers angezeigt (statisch) und einmal angeboten, sobald ein Nachrichtenaustausch zwischen Komponenten stattfindet (dynamisch). Es gab keinen eindeutigen Sieger bezüglich der Frage, ob sie statisch oder dynamisch angeboten werden soll (Tabelle~\ref{table:paper-mockup-kommunikationshilfe}). Jeder Teilnehmer schätzte die jeweilige Variante der Hilfestellung als notwendig bzw. hilfreich ein ($+$) oder nicht ($-$), wobei ein Teilnehmer sich nicht festlegen wollte (0). Es stellte sich heraus, dass die Probanden sich uneins waren, welche Form die Hilfestellung haben sollte: Je ein Teilnehmer fand beide gut oder beide schlecht, zwei bevorzugten die statische Variante und einer die dynamische. Es ist zu beachten, dass diese Anmerkungen nach einer sehr übersichtlichen Situation im Mashup gemacht wurden. Wäre die Nutzerstudie mit mehr Komponenten durchgeführt worden, böte sich wahrscheinlich ein anderes Bild. Deswegen sollten in einer weiteren Nutzerstudie Grenzwerte für die Anzahl an Komponenten und Kommunikationskanälen bestimmt werden, bei denen Benutzer die Kommunikation nicht mehr ohne weiteres nachvollziehen können. Das Hilfesystem kann dann beim Start der kompositen Anwendung entscheiden, ob zusätzlich die dynamische Kommunikationshilfe eingesetzt werden muss.
 
 \begin{table}[htbp]
 	\centering
@@ -1082,7 +1082,7 @@ Es gab keinen eindeutigen Sieger bezüglich der Frage, ob die Kommunikationshilf
     Teilnehmer 1 & +			& +  \\ %fabi
     Teilnehmer 2 & -         	& +   \\ %anna
     Teilnehmer 3 & -         	& +    \\ %kirsche
-    Teilnehmer 4 & +        	& 0  \\ %sebastian
+    Teilnehmer 4 & +        	& 0     \\ %sebastian
     Teilnehmer 5 & -         	& -      \\ %karo
     \hline
     Gesamt		& -1			& +2 
@@ -1093,9 +1093,9 @@ Es gab keinen eindeutigen Sieger bezüglich der Frage, ob die Kommunikationshilf
 
 Auffallend war außerdem, dass Teilnehmer, wenn sie über notwendige Ausführungsschritte sprachen, ein anderes Vokabular als die Kommunikationshilfe (Abschnitt~\ref{section:konzeption:kommunikation}) benutzten. Anstatt in Operationen (\enquote{hier auf einen Balken klicken}) sprachen sie in Aktionen (\enquote{hier einen Spieler auswählen}). Das lässt darauf schließen, dass das Hilfesystem ebenfalls in Aktionen sprechen sollte, wenn es die Zusammenhänge zwischen Komponenten erklärt, da es eher dem mentalen Modell der Benutzer entspricht (Abschnitt~\ref{section:standderforschung:grundlagen}).
 
-Ein Teilnehmer schlug vor, die verschiedenen Hilfestellungen zur Kommunikation zusätzlich in der ursprünglich für die Bedienung vorgesehenen Sidebar aufzulisten. Dieser Ansatz ist sowohl einfach als auch für Benutzer offensichtlich. Vermutlich könnte diese Liste, welche dann alle Anleitungen zu Aktionen in der Komponente, alle Effekte von ausgehenden Nachrichten und alle Reaktionen auf eingehende Nachrichten enthielte, schnell sehr lang werden. Es ist zu befürchten, dass Benutzer in diesem Fall die Liste wegen zu viel dargestellter Information gar nicht mehr beachten. Deshalb wird dieser Vorschlag vorerst nicht umgesetzt.
+Ein Teilnehmer schlug vor, die verschiedenen Hilfestellungen zur Kommunikation zusätzlich in der ursprünglich für die Bedienung vorgesehenen Sidebar aufzulisten. Dieser Ansatz ist sowohl einfach als auch für Benutzer offensichtlich. Vermutlich könnte diese Liste, welche dann alle Anleitungen zu Aktionen in der Komponente, alle Effekte von ausgehenden Nachrichten und alle Reaktionen auf eingehende Nachrichten enthielte, schnell sehr lang werden. Es ist zu befürchten, dass Benutzer in diesem Fall die Liste wegen zu viel dargestellter Information gar nicht mehr beachten würden. Deshalb wird dieser Vorschlag vorerst nicht umgesetzt.
 
-Den Teilnehmern war nicht allein aufgrund der UI klar, dass Kommentare (Abschnitt~\ref{section:konzeption:kommentare}) Annotationen enthalten können und wie diese hinzugefügt oder angezeigt werden. Die Kommentare sollten deswegen am Ende des Intros (Abschnitt~\ref{section:konzeption:intro) zusätzlich erklärt werden. Dasselbe Problem war bei der Bewertungsfunktion von Kommentaren zu beobachten. Die abstrakten, von StackOverflow\footnote{\url{http://stackoverflow.com}} inspirierten Icons wurden auch von Informatikern teilweise mit \enquote{scrollen} anstatt \enquote{bewerten} assoziiert. Deswegen sollte noch einmal explizit mit Text beschrieben werden, dass sie eine Bewertungsfunktion darstellen und welche Semantik sich hinter ihnen verbirgt (\enquote{agree/disagree}). Falls die Funktionalität dann immer noch nicht verständlich ist, können die abstrakten Icons durch Daumen hoch/runter ersetzt werden. Eine weitere Erkenntnis diesem Sachverhalt ist, dass Scrollmöglichkeiten immer explizit dargestellt werden sollten. Das kann entweder in Form einer Scrollbar oder wie im Metro User Interface von Windows Phone~7 mit angeschnittenen Interaktionselementen passieren.
+Den Teilnehmern war nicht allein aufgrund der UI klar, dass Kommentare (Abschnitt~\ref{section:konzeption:kommentare}) Annotationen enthalten können und wie diese hinzugefügt oder angezeigt werden. Die Kommentare sollten deswegen am Ende des Intros (Abschnitt~\ref{section:konzeption:intro}) zusätzlich erklärt werden. Dasselbe Problem war bei der Bewertungsfunktion von Kommentaren zu beobachten. Die abstrakten, von StackOverflow\footnote{\url{http://stackoverflow.com}} inspirierten Icons wurden auch von Informatikern teilweise mit \enquote{scrollen} anstatt \enquote{bewerten} assoziiert. Deswegen sollte noch einmal explizit mit Text beschrieben werden, dass sie eine Bewertungsfunktion darstellen und welche Semantik sich hinter ihnen verbirgt (\enquote{agree/disagree}). Falls die Funktionalität dann immer noch nicht verständlich ist, können die abstrakten Icons durch Daumen hoch/runter ersetzt werden. Eine weitere Erkenntnis diesem Sachverhalt ist, dass Scrollmöglichkeiten immer explizit dargestellt werden sollten. Das kann entweder in Form einer Scrollbar oder wie im Metro User Interface von Windows Phone~7 mit angeschnittenen Interaktionselementen passieren.
 
 Von zwei Teilnehmern kam der Vorschlag, die Anzahl der Kommentare (Abschnitt~\ref{section:konzeption:kommentare}) in einer Visualisierung ständig darzustellen und nicht über einen Button in der Titelleiste zu toggeln. Hier ist aber zu beachten, dass die Komponenten im Paper Mockup sehr einfach gehalten waren und sehr eingeschränktes Interaktionspotential boten. Bei einem großen Scatterplot oder Parallel Coordinates ist diese Variante nicht mehr praktikabel. Aufgrund des Ziels der \emph{Einheitlichkeit} sollten auch keine Ausnahmen gemacht werden.
 
@@ -1200,7 +1200,7 @@ Für das Hilfesystem sind Operationen und Aktionen relevant, da Aktivitäten nic
 
 Die Komponentenbeschreibung gibt bereits Auskunft über die verfügbaren Aktionen in einer Komponente (Capabilities). Es fehlen aber noch Informationen darüber, welche Operationen auf welchen Elementen die Aktion ausführen. Um dem beizukommen, werden Operationen aus der VISO (\enquote{welche Operationen}) zusammen mit CSS Selektoren (\enquote{welche Elemente}) in der Komponentenbeschreibung definiert. Äquivalente Operationen, welche dieselbe Aktion ausführen, werden zusammengefasst. Wenn eine Tabelle sowohl durch einen Klick auf den Spaltenkopf als auch über ein separates Menü sortiert werden kann, werden diese Aktionen als äquivalent zusammengefasst. Sequentielle Operationen werden ebenfalls zusammengefasst, wobei die Reihenfolge im Markup die notwendige Ausführungsreihenfolge darstellt. So können auch zusammengesetzte Operationen, wie beispielsweise für ein HTML \texttt{select} Element nötig, abgebildet werden. Parallele Operationen werden nach demselben Prinzip zusammengefasst, allerdings ist hier die Reihenfolge irrelevant, da sie gleichzeitig ausgeführt werden müssen. Auf diese Weise können zusammengesetzte Operationen der der Art STRG+T abgebildet werden.
 
-Außerdem kann der Komponentenentwickler eine Anzahl von Sekunden definieren, die bei der Generierung der Panels gewartet werden soll. Das ist beispielsweise sinnvoll, wenn längere Animationen zu erwarten sind. Beispielsweise weil der Entwickler UI Elemente innerhalb von fünf Sekunden anstatt 500~Millisekunden einblenden will. Zusätzlich ist es möglich, dass der Entwickler Zusatzinformationen in Stichworten angibt. Zum Beispiel könnte bei einem Balkendiagramm die Skala \enquote{verändert} (Aktion) werden. Dabei ist es wichtig zu wissen, welche Skala verwendet werden wird, z.\,B. linear oder logarithmisch. Der Inhalt dieser Zusatzinformationen kann statischer Freitext oder eine Referenz auf eine Datenvariable im Schema der Komponente sein, deren Label zur Laufzeit angezeigt würde. Nach demselben Prinzip sollten auch Zusatzinformationen über die VISO Operation angegeben werden können. Vor allem bei Tastaturkürzel (z.\,B. j/k für vor/zurück) macht es Sinn, da so nicht für jede Taste eine VISO Operation erstellt werden muss. Die erwähnten Zusätze zur Komponentenbeschreibung sollten allerdings optional sein, falls der Komponentenentwickler keine Hilfe für bestimmte Aktionen anbieten will.
+Außerdem kann der Komponentenentwickler eine Anzahl von Sekunden definieren, die bei der Generierung der Panels gewartet werden soll. Das ist beispielsweise sinnvoll, wenn längere Animationen zu erwarten sind. Beispielsweise weil der Entwickler UI Elemente innerhalb von fünf Sekunden anstatt 500~Millisekunden einblenden will. Zusätzlich ist es möglich, dass der Entwickler Zusatzinformationen in Stichworten angibt. Zum Beispiel könnte bei einem Balkendiagramm die Skala \enquote{verändert} (Aktion) werden. Dabei ist es wichtig zu wissen, welche Skala verwendet werden wird, z.\,B. linear oder logarithmisch. Der Inhalt dieser Zusatzinformationen kann statischer Freitext oder eine Referenz auf eine Datenvariable im Schema der Komponente sein, deren Label zur Laufzeit mit Hilfe des Mappings zwischen Daten und Schema der Komponente angezeigt würde. Nach demselben Prinzip sollten auch Zusatzinformationen über die VISO Operation angegeben werden können. Vor allem bei Tastaturkürzel (z.\,B. j/k für vor/zurück) macht es Sinn, da so nicht für jede Taste eine VISO Operation erstellt werden muss. Die erwähnten Zusätze zur Komponentenbeschreibung sollten allerdings optional sein, falls der Komponentenentwickler keine Hilfe für bestimmte Aktionen anbieten will.
 
 Im folgenden werden die in diesem Abschnitt vorgenommenen Änderungen an der Komponentenbeschreibung noch einmal zusammengefasst:
 \begin{itemize}
@@ -1707,7 +1707,9 @@ Kommentare können auch Metainformationen über die Daten oder Komponente enthal
 
 % warum undo/redo?
 
-In den verwandten Arbeiten (Abschnitt~\ref{section:standderforschung:verwandte_arbeiten}) wurde mehrmals empfohlen, dem Benutzer Undo/Redo von getätigten Aktionen zu ermöglichen. So können unerwünschte Ergebnisse einfach rückgängig gemacht werden. In diesem Abschnitt wird untersucht, wie in einem CRUISe Mashup, in dem die Komponenten lose gekoppelt sind, ein kompositionsübergreifendes Undo/Redo umgesetzt werden kann. Die Granularitätsstufe entspricht dabei Nutzerinteraktionen beziehungsweise zusammenhängenden anstatt einzelnen Events oder Operationen. Das sollte sich wie in den verwandten Arbeiten von Grammel \cite{Grammel2012} vorgeschlagen mit dem mentalen Modell des Benutzers decken, da für ihn Events und Operationen unsichtbar sind. Als Beispiel wird die Komposition in Abbildung~\ref{figure:dependency-graph-example} verwendet.
+In den verwandten Arbeiten (Abschnitt~\ref{section:standderforschung:verwandte_arbeiten}) wurde mehrmals empfohlen, dem Benutzer Undo/Redo von getätigten Aktionen zu ermöglichen. So können unerwünschte Ergebnisse einfach rückgängig gemacht werden. Heer et al. \cite{Heer2008} unterscheiden dabei zwei Modelle einer History: State und Action. Bei einer State History sind die Knoten Applikationszustände und die Kanten Aktionen, bei einer Action History ist es umgekehrt. Undo in einer Action History bedeutet in Reihenfolge inverse Aktionen auszuführen, in einer State History ist es die Wiederherstellung eines gespeicherten Zustands.
+
+In diesem Abschnitt wird untersucht, wie in einem CRUISe Mashup, in dem die Komponenten lose gekoppelt sind, ein kompositionsübergreifendes Undo/Redo umgesetzt werden kann. Die Granularitätsstufe entspricht dabei Nutzerinteraktionen beziehungsweise zusammenhängenden anstatt einzelnen Events oder Operationen. Das sollte sich wie in den verwandten Arbeiten von Grammel \cite{Grammel2012} vorgeschlagen mit dem mentalen Modell des Benutzers decken, da für ihn Events und Operationen unsichtbar sind. Als Beispiel wird die Komposition in Abbildung~\ref{figure:dependency-graph-example} verwendet.
 
 \begin{figure}[htbp]
    \centering
@@ -1716,7 +1718,7 @@ In den verwandten Arbeiten (Abschnitt~\ref{section:standderforschung:verwandte_a
    \label{figure:dependency-graph-example}
 \end{figure}
 
-In Abschnitt~\ref{section:konzeption:kommentare:api} wurde ein Memento-Pattern für Komponenten eingeführt. Damit kann das Hilfesystem Zustände von Komponenten abrufen, speichern und wiederherstellen. Im Folgenden wird davon ausgegangen, dass diese Mementos ausreichen, um eine Komponente von einem konsistenten Zustand in einen anderen konsistenten Zustand zu überführen (und beispielsweise keine Operationen ausgeführt werden müssen). Es stellt sich allerdings die Frage, wann die Mementos der Komponenten abgerufen werden sollen. Prinzipiell kann es vor oder nach einem Event (welches Operationen aufruft, die potentiell den Zustand der Komponente ändern) passieren.
+In Abschnitt~\ref{section:konzeption:kommentare:api} wurde ein Memento-Pattern für Komponenten eingeführt. Damit kann das Hilfesystem Zustände von Komponenten abrufen, speichern und wiederherstellen. Im Folgenden wird davon ausgegangen, dass diese Mementos ausreichen, um eine Komponente von einem konsistenten Zustand in einen anderen konsistenten Zustand zu überführen (und beispielsweise keine Operationen ausgeführt werden müssen). Das deckt sich mit dem Paradigma von CRUISe, wonach die Menge an Properties den Zustand einer Komponente vollständig beschreiben. Gegebenenfalls muss die Komponente selbst ihre Konsistenz überprüfen, beispielsweise wenn eine Liste von Flügen in einen späteren Zustand wiederhergestellt werden soll und einige inzwischen ausgebucht sind. Es stellt sich nun die Frage, wann die Mementos der Komponenten abgerufen werden sollen. Prinzipiell kann es vor oder nach einem Event (welches Operationen aufruft, die potentiell den Zustand der Komponente ändern) passieren.
 
 % vorher - klappt nicht, funkt der dev dazwischen 
 
@@ -1796,7 +1798,7 @@ Um dem beizukommen, kann das Hilfesystem eigene Eventhandler auf aktionsrelevant
 
 % unterscheidung verschiedener historys und festlegung, was wir haben
 
-Heer et al. \cite{Heer2008} unterscheiden zwei Modelle einer History: State und Action. Bei einer State History sind die Knoten Applikationszustände und die Kanten Aktionen, bei einer Action History ist es umgekehrt. Undo in einer Action History bedeutet in Reihenfolge inverse Aktionen auszuführen, in einer State History ist es die Wiederherstellung eines gespeicherten Zustands. Der im vorangehenden Abschnitt vorgestellte Algorithmus, welcher zu gegebener Zeit Mementos der Komponenten abruft, speichert und wiederherstellt, macht die hier behandelte History zu einer State History. Um die State History einfach bedienen zu können, sollten die verschiedenen States erkennbar dargestellt werden.
+Der im vorangehenden Abschnitt vorgestellte Algorithmus, welcher zu gegebener Zeit Mementos der Komponenten abruft, speichert und wiederherstellt, macht die hier behandelte History zu einer State History. Um die State History einfach bedienen zu können, sollten die verschiedenen States erkennbar dargestellt werden.
 
 \subsubsection{Umsetzung einer webbasierten State History}
 
@@ -1806,35 +1808,21 @@ Prinzipiell kann der in Abschnitt~\ref{section:konzeption:bedienung:generierung}
 
 % aber wenigstens können wir den DOM kopieren? sorta, yes.
 
-Eine andere Variante, um an realitätsgetreue Abbildungen von Komponentenzuständen zu gelangen, wäre ihren DOM zu kopieren und verkleinert in der History anzuzeigen. Problematisch sind dabei CSS Regeln mit absoluten Einheiten, wie zum Beispiel Pixel oder Punkt. Eine Lösung dafür wäre zur Laufzeit das CSS einer Komponente in relative Einheiten zu transformieren. Folgender naiver Algorithmus in Pseudocode (Listing~\ref{code:relative-css}) wäre ein erster Ansatz:
+Eine andere Variante, um an realitätsgetreue Abbildungen von Komponentenzuständen zu gelangen, wäre ihren DOM zu kopieren und verkleinert in der History anzuzeigen. Problematisch sind dabei CSS Regeln mit absoluten Einheiten, wie zum Beispiel Pixel oder Punkt. Eine Lösung dafür wäre zur Laufzeit das CSS einer Komponente in relative Einheiten zu transformieren. Abbildung \ref{figure:transform-css} zeigt  einen naiven Algorithmus als ersten Ansatz. Dabei wird am Wurzelelement gestartet (\texttt{DIV B}) und die relative Breite und Höhe zum Elternknoten (\texttt{DIV A}) berechnet (Schritt 1). Diese Attribute werden im CSS gesetzt. Danach wird der Algorithmus rekursiv für die Kinder von \texttt{DIV B} aufgerufen, also \texttt{DIV C} und \texttt{D}, und nach demselben Prinzip fortgefahren.
 
-\begin{lstlisting}[language=Java,
-				  title=Naiver Algorithmus um relative CSS Einheiten zu forcieren,
-				  label=code:relative-css]
-function relativeCSS(parent) {
-	var p_width = parent.width(),
-		p_height= parent.height();
-	
-	parent.children().each( function(i,child) {
-		var width = this.width(),
-			height= this.height(),
-			w_ratio = width/p_width,
-			h_ratio = height/p_height;
-			
-		this.width(w_ratio+"%");
-		this.height(h_ratio+"%");
-			
-		relativeCSS(child);
-	});
-}
-\end{lstlisting}
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[width=\textwidth]{images/konzeption-transform-css.png}
+   \caption{Naiver Algorithmus um CSS zu in relative Einheiten zu transformieren}
+   \label{figure:transform-css}
+\end{figure}
 
-Der vorgestellte Code hat einige offensichtliche Schwachstellen. Beispielsweise gibt es 
+Der vorgestellte Algorithmus hat einige offensichtliche Schwachstellen. Beispielsweise gibt es 
 
 \begin{itemize}
 	\item Elemente ohne definierte Breite oder Höhe (\texttt{svg:g}), 
 	\item mit besonderer Größendefinition (\texttt{svg:circle}) oder
-	\item Attribute, welche ebenfalls skaliert werden müssen (\texttt{x}, \texttt{y}).
+	\item Attribute, welche ebenfalls skaliert werden müssen (\texttt{margin}, \texttt{x}).
 \end{itemize}
 
 Hinzu kommt, dass sowohl alle möglichen Elemente, also auch ClipPaths, Polygone, Polylinien und so weiter als auch deren Transformationen (verschieben, rotieren, skalieren, verzerren etc.) korrekt skaliert werden müssen. Außerdem ist der Vorgang wahrscheinlich sehr langsam, da der Browser nach jedem Update eines layoutrelevanten CSS Attributs (wie Breite oder Höhe) das Layout neu berechnen muss (\enquote{Reflow}) und währenddessen das User Interface blockiert. Der Vorgang erscheint zwar nicht einfach, aber lösbar und sollte dennoch möglichst vermieden werden.
@@ -1896,7 +1884,7 @@ Die beste Lösung wäre sicher, wenn das Hilfesystem erkennen könnte, wenn der 
 
 % deswegen versuchen aus interaktionsgeschichte, komposition, umgebung und nutzerinformationen regeln zu schließen --> supervised learning
 
-Eine zweite Lösungsmöglichkeit ist das Konzept von Trace-Based Reasoning \cite{Cordier2013} anzuwenden. Durch maschinelles Lernen \cite{Kotsiantis2007} von Daten über Nutzer, Komposition, Umgebung und Interaktionsgeschichte werden Regeln z.\,B. in Form eines Decision Trees gefunden, wann Hilfe angeboten werden soll. So kann das Hilfesystem aus vergangenen Erfahrungen mit Nutzern lernen. Der Nachteil ist allerdings, dass die Ergebnisse nicht zufriedenstellend sein werden, bis dem Hilfesystem ausreichend Trainingsdaten zur Verfügung stehen. Abbildung~\ref{figure:architektur-dynhilfe} zeigt einen Überblick des Systems.
+Eine weitere Lösungsmöglichkeit ist das Konzept von Trace-Based Reasoning \cite{Cordier2013} anzuwenden. Durch maschinelles Lernen \cite{Kotsiantis2007} von Daten über Nutzer, Komposition, Umgebung und Interaktionsgeschichte werden Regeln z.\,B. in Form eines Decision Trees gefunden, wann Hilfe angeboten werden soll. So kann das Hilfesystem aus vergangenen Erfahrungen mit Nutzern lernen. Der Nachteil ist allerdings, dass die Ergebnisse nicht zufriedenstellend sein werden, bis dem Hilfesystem ausreichend Trainingsdaten zur Verfügung stehen. Abbildung~\ref{figure:architektur-dynhilfe} zeigt einen Überblick des Systems.
 
 \begin{figure}[htbp]
    \centering
@@ -1936,16 +1924,22 @@ Je nach Algorithmus können Attribute unterschiedlichen oder festen Typs sein: D
    \label{figure:sml-ziel}
 \end{figure}
 
-
-Nun stellt sich die Frage, welche Daten für das maschinelle Lernen herangezogen werden sollen, d.\,h. wie der Feature Vector aussieht. Wie bereits erwähnt sind verschachtelte Attribute wie Arrays oder Mengen nicht zulässig, d.\,h. es können nicht alle Interaktionen des Nutzers herangezogen werden (weil sie nicht eine Zelle der Tabelle passen). Darum werden die Facetten mehrerer Interaktionen, zum Beispiel in welcher Komponente sie stattfand oder welche Operation es war, zum Feature Vector hinzugefügt. Da die Anzahl von Spalten der Tabelle Einfluss auf die Laufzeit des Algorithmus hat (weniger ist besser), aber mehr Spalten potentiell mehr Erkenntnisse ermöglichen (mehr ist besser) und das Hilfeangebot nicht zu spät erfolgen darf (weniger ist besser), scheinen fünf Interaktionen ein guter Kompromiss zu sein (Abbildung~\ref{figure:sml-ziel}). Es erscheint sinnvoll folgende Informationen zu erfassen:
+Nun stellt sich die Frage, welche Daten für das maschinelle Lernen herangezogen werden sollen, d.\,h. wie der Feature Vector aussieht. Wie bereits erwähnt, sind verschachtelte Attribute wie Arrays oder Mengen nicht zulässig, d.\,h. es können nicht alle Interaktionen des Nutzers herangezogen werden (weil sie nicht eine Zelle der Tabelle passen). Darum werden die Facetten mehrerer Interaktionen, zum Beispiel in welcher Komponente sie stattfand oder welche Operation es war, zum Feature Vector hinzugefügt. Da die Anzahl von Spalten der Tabelle Einfluss auf die Laufzeit des Algorithmus hat (weniger ist besser), aber mehr Spalten potentiell mehr Erkenntnisse ermöglichen (mehr ist besser) und das Hilfeangebot nicht zu spät erfolgen darf (weniger ist besser), scheinen fünf Interaktionen ein guter Kompromiss zu sein (Abbildung~\ref{figure:sml-ziel}). Jedoch sollte das in Tests genauer evaluiert werden. Es erscheint sinnvoll folgende Informationen zu erfassen:
 
 \begin{itemize}
-	\item Alter, Geschlecht, Domäne und Ort des Benutzers
-	\item Zeit und Datum
-	\item Für die letzten 5~Interaktionen des Benutzers: Komponente, Operation und vergangene Zeit seit Nutzungsstart
-	\item Ob Hilfe angeboten wurde und wenn ja, welche Funktion
-	\item Ob Hilfe aufgerufen wurde und wenn ja, welche Funktion
+	\item Alter, Geschlecht, Domäne und Ort des Benutzers: Diese können im Context oder User Service von VizBoard gespeichert sein. Mit Hilfe der Domäne soll fachabhängigen Fehlinterpretationen beigekommen werden, beispielsweise falls Mathematiker dazu tendieren Pfeile verkehrt herum zu deuten. Falls Menschen in Asien Icons anders interpretieren sollten, kann der Ort des Benutzers das Hilfesystem darauf hinweisen.
+	\item Zeit und Datum der Interaktion: Sie sind nötig um Tag und Nacht unterscheiden zu können. Menschen sind bei Nacht eher müde und wenig konzentriert, benötigen daher früher Hilfe.
+	\item Für die letzten 5~Interaktionen des Benutzers: Grafische Repräsentation der Komponente, Aktion und vergangene Zeit seit Nutzungsstart. Je genereller die gespeicherten Informationen, desto besser für das Hilfesystem, welches die Erkenntnisse in umso mehr Komponenten verwenden kann.
+	\item Ob Hilfe angeboten wurde und wenn ja, welche Funktion: Diese Information ist nötig, um Fehlinterpretationen des Hilfesystems zu erkennen (Abbildung~\ref{figure:meta-dyn-id}).
+	\item Ob Hilfe aufgerufen wurde und wenn ja, welche Funktion: Dieses Attribut soll durch den Decision Tree vorhergesagt werden.
 \end{itemize}
+
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[width=0.5\textwidth]{images/konzeption-meta-dyn-id.png}
+   \caption{Erkennung von False Positives und False Negatives}
+   \label{figure:meta-dyn-id}
+\end{figure}
 
 Das Hilfesystem schickt alle fünf Interaktionen einen solchen Datensatz an die Wissensbasis, welche ihn zu den Trainingsdaten hinzufügt. Außerdem wird der Datensatz an den Classifier weitergegeben, der das letzte Attribut vorhersagt. Ist das Ergebnis ein anderes als \enquote{Keine Hilfe nötig}, bietet das Hilfesystem dem Benutzer Hilfe zur entsprechenden Funktion an.
 
